--- a/page.html
+++ b/page.html
@@ -1,13 +1,3 @@
-<!-- //- !!!
-//- html
-//-     head
-//-         title= "Chat application in real time"
-//-     body
-//-         #content(style='width: 500px; height: 300px; margin: 0 0 20px 0; border: solid 1px #999; overflow-y: scroll;')
-//-         .controls
-//-             input.field(style='width: 350px;')
-//-             input.send(type='button, value='send') -->
-
 <!doctype html>
 <html>
   <head>
@@ -23,14 +13,20 @@
       #messages li:nth-child(odd) { background: #eee; }
     </style>
   </head>
-  <script src="/socket.io/socket.io.js"></script>
-  <script>
-    var socket = io();
-  </script>
   <body>
     <ul id="messages"></ul>
     <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+      <input id="message" autocomplete="off" /><button>Send</button>
     </form>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script>
+      var socket = io();
+      $('form').submit(function() {
+        socket.emit('chat message', $('#message').val());
+        $('#message').val('');
+        return false;
+      });
+    </script>
   </body>
 </html>
