--- a/page.html
+++ b/page.html
@@ -27,6 +27,9 @@
         $('#message').val('');
         return false;
       });
+      socket.on('message', function(msg) {
+        $('#messages').append($('<li>').text(msg));
+      })
     </script>
   </body>
 </html>
